# gpu-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/gpu-monitor-cli/: Cargo.toml
crates/gpu-monitor-cli/src/: app.rs  main.rs  tui.rs  ui.rs
crates/gpu-monitor-core/: Cargo.toml
crates/gpu-monitor-core/src/: device.rs  error.rs  lib.rs  metrics.rs  monitor.rs  process.rs
crates/gpu-monitor-gui/: Cargo.toml  dev.sh  gen_icons.sh  tauri.conf.json
crates/gpu-monitor-gui/capabilities/: default.json
crates/gpu-monitor-gui/src/: commands.rs  lib.rs  main.rs
crates/gpu-monitor-gui/src-web/: index.html  package-lock.json  package.json  vite.config.ts
crates/gpu-monitor-gui/src-web/src/: App.tsx  main.tsx
crates/gpu-monitor-gui/src-web/src/components/: GpuCard.tsx  ProcessList.tsx  ProcessModal.tsx  Sparkline.tsx  UsageRing.tsx
crates/gpu-monitor-gui/src-web/src/styles/: index.css
