[package]
name = "gpu-monitor-cli"
version.workspace = true
edition.workspace = true
description = "GPU Monitor CLI - Terminal UI for monitoring NVIDIA GPUs"

[[bin]]
name = "gpu-monitor"
path = "src/main.rs"

[dependencies]
gpu-monitor-core = { path = "../gpu-monitor-core" }
anyhow = "1.0"
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
