[package]
name = "gpu-monitor-gui"
version.workspace = true
edition.workspace = true
description = "GPU Monitor GUI - Desktop application for monitoring NVIDIA GPUs"

[lib]
name = "gpu_monitor_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
gpu-monitor-core = { path = "../gpu-monitor-core" }
tauri = { workspace = true, features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
